tests/fixtures/positive/naming/ConstructorParameterNaming.kt
package com.example.naming

class Foo(val BadParam: Int, val AnotherBad: String)

class Bar(
    val WrongName: Double,
    val AlsoWrong: Boolean
)
