tests/fixtures/negative/naming/ConstructorParameterNaming.kt
package com.example.naming

class Foo(val goodParam: Int, val anotherGood: String)

class Bar(
    val correctName: Double,
    val alsoCorrect: Boolean
)
